# disco

./: eval_model.py  gen_disco_dataset.py  predict_disco.py  pyproject.toml  requirements.txt  train_disco_sweep.py
config_files/: dices_dataset_990.cfg
disco/: __init__.py
losses/: __init__.py  disco_loss.py
model/: __init__.py  disco.py
tests/: test_disco.py
utils/: __init__.py  utils.py
