[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disco-model"
version = "0.1.0"
description = "DisCo model and utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.2.3",
    "torch>=2.0.0",
    "transformers>=4.10.2",
    "wandb>=0.12.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "disco",
    "disco.*",
    "losses",
    "losses.*",
    "model",
    "model.*",
    "utils",
    "utils.*",
]
